# tinycrypt

./: .gitignore  CMakeLists.txt  README  README.md
lib/: CMakeLists.txt
lib/source/: ecc_platform_specific.c
tests/: CMakeLists.txt  test_ecc_dh.c  test_ecc_utils.c
